--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,93 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+.App {
+  text-align: center;
+}
+
+.todoContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.checkBox {
+  height: 25px;
+  width: 25px;
+  margin-left: 20px;
+}
+
+.additionContainer {
+  margin-top: 20px;
+}
+
+.todoContainer p {
+  font-size: 21px;
+}
+
+.additionContainer input {
+  height: 40px;
+  width: 250px;
+  border-radius: 15px;
+  border: #8cacb3;
+  text-indent: 10px;
+}
+
+.additionContainer input:focus {
+  outline: #7989b3 2px solid;
+}
+
+.additionContainer button {
+  border-radius: 15px;
+  width: 120px;
+  height: 40px;
+  margin-left: 20px;
+  background-color: #7989b3;
+  border: 0;
+  color: #fff;
+  font-size: 17px;
+  cursor: pointer;
+}
+
+.completed {
+  text-decoration: line-through;
+  color: white;
+}
+.todoTitle {
+  background-color: #8cacb3;
+  border: 0;
+  height: 30px;
+  font-size: 20px;
+}
+.todoTitle:focus {
+  outline: none;
+}
+
+.pencil {
+  cursor: pointer;
+}
+
+.mainContainer {
+  display: flex;
+  flex-direction: column;
+  background-color: #8cacb3;
+  width: 700px;
+  border-radius: 20px;
+  padding-bottom: 200px;
+  margin: 0 auto;
+}
+.trash {
+  cursor: pointer;
+  font-size: 20px;
+  margin-right: 10px;
 }
